--- a/src/templates/db_listing.html
+++ b/src/templates/db_listing.html
@@ -192,7 +192,7 @@
       var tbody = document.createElement('tbody');
 
       // Define headers based on PublicCacheEntry keys
-      var headers = ['URL', 'Type', 'Timecode'];
+      var headers = ['URL', 'Timecode', 'Type', 'Expiration'];
       var trHead = document.createElement('tr');
       headers.forEach(header => {
         var th = document.createElement('th');
@@ -207,26 +207,38 @@
 
       // Populate table rows
       entriesToShow.forEach(entry => {
-        var tr = document.createElement('tr');
-        headers.forEach(header => {
-          var td = document.createElement('td');
+        const tr = document.createElement('tr');
 
-          if (header.toLowerCase() === 'url') {
-            var a = document.createElement('a');
-            a.href = 'https://youtube.com/' + entry[header.toLowerCase()];
-            if (entry['type'] === 'music') {
-              a.href = 'https://music.youtube.com/' + entry[header.toLowerCase()];
-            }
-            a.innerText = entry[header.toLowerCase()];
+        headers.forEach(header => {
+          const headerKey = header.toLowerCase();
+          const td = document.createElement('td');
+          const cellValue = entry[headerKey];
+
+          if (headerKey === 'url') {
+            const baseUrl = entry['type'] === 'music' ? 'https://music.youtube.com/' : 'https://youtu.be/';
+            const a = document.createElement('a');
+            const cleanedUrl = cellValue.replace(/(\?t=\d+&?)|(&t=\d+)/g, function (match, group1) {
+              if (group1) { // If the match is at the beginning (?t=...&)
+                return match.endsWith('&') ? '?' : ''; // Replace with '?' if followed by another param, else remove
+              }
+              return ''; // For &t=... just remove it
+            });
+            a.href = `${baseUrl}${cellValue}`;
+            a.innerText = cleanedUrl;
             a.target = '_blank';
             td.appendChild(a);
+          } else if (headerKey === 'expiration') {
+            td.innerText = formatExpirationDate(cellValue);
+            td.title = new Date(cellValue * 1000).toISOString();
+          } else if (headerKey === 'timecode') {
+            td.innerText = formatTimeCode(cellValue);
           } else {
-            // for others, just display the text
-            td.innerText = entry[header.toLowerCase()] || '';
+            td.innerText = cellValue || '';
           }
 
           tr.appendChild(td);
         });
+
         tbody.appendChild(tr);
       });
 
@@ -262,6 +274,30 @@
   };
 
   populateEntries();
+
+  function formatExpirationDate(timestamp) {
+    const expirationDate = new Date(timestamp * 1000);
+    const today = new Date();
+    const differenceInDays = Math.floor((expirationDate - today) / (1000 * 60 * 60 * 24));
+
+    if (differenceInDays < 0) return 'Expired';
+    if (differenceInDays === 0) return 'Today';
+    if (differenceInDays === 1) return 'Tomorrow';
+    if (differenceInDays < 7) return `In ${differenceInDays} days`;
+
+    return expirationDate.toDateString();
+  }
+
+  function formatTimeCode(seconds) {
+    try {
+      const date = new Date(0);
+      date.setSeconds(Number(seconds));
+      let timeString = date.toISOString().substr(11, 8);
+      return timeString.startsWith('00:') ? timeString.substr(3) : timeString;
+    } catch (e) {
+      return 'N/A';
+    }
+  }
 </script>
 
 </html>
