Rebrand to Koutube

--- a/src/templates/db_listing.html
+++ b/src/templates/db_listing.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Yockstube cache</title>
+  <title>Koutube cache</title>
   <link href="https://cdn.jsdelivr.net/npm/daisyui@4.6.0/dist/full.min.css" rel="stylesheet" type="text/css" />
   <script src="https://cdn.tailwindcss.com"></script>
 </head>
@@ -13,7 +13,7 @@
   <div class="flex flex-col h-screen justify-between">
     <div class="navbar bg-primary text-primary-content">
       <div class="flex-1">
-        <a class="btn btn-ghost text-xl">Yockstube cache database
+        <a class="btn btn-ghost text-xl">Koutube cache database
           <div class="badge badge-accent badge-lg" id="entryCount">0</div>
         </a>
       </div>
@@ -139,7 +139,7 @@
         </div>
       </aside>
       <nav class="flex flex-col sm:flex-row">
-        <a href="https://github.com/iGerman00/yockstube" target="_blank" class="btn btn-wide btn-sm max-w-24">
+        <a href="https://github.com/iGerman00/koutube" target="_blank" class="btn btn-wide btn-sm max-w-24">
           GitHub
         </a>
         <a href="https://igerman.cc/" target="_blank" class="btn btn-primary btn-wide btn-sm max-w-24">
