Improve DB listing styling on mobile

--- a/src/templates/db_listing.html
+++ b/src/templates/db_listing.html
@@ -126,7 +126,7 @@
     <div class="w-full flex content-center justify-center mt-8 pb-10">
       <div class="bg-base-300 shadow-md rounded p-5 w-[calc(100%-10rem)]">
         <h2 class="text-2xl font-bold mb-4 text-center">Cache entries</h2>
-        <div class="flex flex-col" id="table-container">
+        <div class="flex flex-col overflow-auto" id="table-container">
         </div>
         <div class="grid grid-flow-col" id="buttons"></div>
       </div>
