--- a/src/templates/db_listing.html
+++ b/src/templates/db_listing.html
@@ -192,7 +192,7 @@
       var tbody = document.createElement('tbody');
 
       // Define headers based on PublicCacheEntry keys
-      var headers = ['URL', 'Timecode', 'Type', 'Expiration'];
+      var headers = ['URL', 'Timecode', 'Type', 'Expiration', 'Size'];
       var trHead = document.createElement('tr');
       headers.forEach(header => {
         var th = document.createElement('th');
@@ -217,12 +217,21 @@
           if (headerKey === 'url') {
             const baseUrl = entry['type'] === 'music' ? 'https://music.koutube.com/' : window.location.origin + '/';
             const a = document.createElement('a');
-            let cleanedUrl = cellValue.replace(/(\?t=\d+&?)|(&t=\d+)/g, function (match, group1) {
+            let cleanedUrl = cellValue.replace(/(\?t=\w+&?)|(&t=\w+)/g, function (match, group1) {
               if (group1) { // If the match is at the beginning (?t=...&)
                 return match.endsWith('&') ? '?' : ''; // Replace with '?' if followed by another param, else remove
               }
               return ''; // For &t=... just remove it
             });
+            if (cleanedUrl.startsWith('img/')) {
+              cleanedUrl = cleanedUrl.substr(4);
+              cleanedUrl = cleanedUrl.replace(/(\?size=\w+)|(&size=\w+)/g, function (match, group1) {
+                if (group1) { // If the match is at the beginning (?size=...&)
+                  return match.endsWith('&') ? '?' : ''; // Replace with '?' if followed by another param, else remove
+                }
+                return ''; // For &size=... just remove it
+              });
+            }
             if (cleanedUrl.length > 50) {
               cleanedUrl = cleanedUrl.substr(0, 50) + '...';
             }
@@ -236,6 +245,9 @@
             td.title = new Date(cellValue * 1000).toISOString();
           } else if (headerKey === 'timecode') {
             td.innerText = formatTimeCode(cellValue);
+          } else if (headerKey === 'size') {
+            td.innerText = cellValue;
+            // else td.innerText = 'N/A';
           } else {
             td.innerText = cellValue || '';
           }
@@ -292,12 +304,28 @@
     return expirationDate.toDateString();
   }
 
-  function formatTimeCode(seconds) {
+  function formatTimeCode(timecode) {
     try {
-      const date = new Date(0);
-      date.setSeconds(Number(seconds));
-      let timeString = date.toISOString().substr(11, 8);
-      return timeString.startsWith('00:') ? timeString.substr(3) : timeString;
+				let timeInSeconds = 0;
+				if (timecode.includes('h')) {
+					const hours = Number(timecode.split('h')[0]);
+					timeInSeconds += hours * 3600;
+					timecode = timecode.split('h')[1];
+				}
+				if (timecode.includes('m')) {
+					const minutes = Number(timecode.split('m')[0]);
+					timeInSeconds += minutes * 60;
+					timecode = timecode.split('m')[1];
+				}
+				if (timecode.includes('s')) {
+					const seconds = Number(timecode.split('s')[0]);
+					timeInSeconds += seconds;
+				}
+
+				const date = new Date(0);
+				date.setSeconds(timeInSeconds == 0 ? Number(timecode) : timeInSeconds);
+				let timeString = date.toISOString().substring(11, 19).replace('00:', '');
+        return timeString;
     } catch (e) {
       return 'N/A';
     }
