--- a/src/templates/db_listing.html
+++ b/src/templates/db_listing.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>Koutube cache</title>
-  <link href="https://cdn.jsdelivr.net/npm/daisyui@4.6.0/dist/full.min.css" rel="stylesheet" type="text/css" />
+  <link href="https://cdn.jsdelivr.net/npm/daisyui@4.12.12/dist/full.min.css" rel="stylesheet" type="text/css" />
   <script src="https://cdn.tailwindcss.com"></script>
 </head>
 
@@ -155,7 +155,7 @@
 </body>
 
 <script>
-  const theme = localStorage.getItem('theme') || 'business';
+  const theme = localStorage.getItem('theme') || 'pastel';
   document.querySelector('html').setAttribute('data-theme', theme);
 
   const themeControllers = document.querySelectorAll('.theme-controller');
